# cmd/portal/router/public_routes.go
@@ -1,4 +1,4 @@
-package main
+package router
 
 import (
 	"github.com/gorilla/mux"
@@ -37,22 +37,9 @@ func addPublicRoutes(router *mux.Router, cfg config.Config, sr *service.Registry
 		Path("/user/profile").
 		Handler(middleware.AuthVerifier(cfg.Auth)(handler.UserProfileHandler(cfg, sr)))
 
-	//	swagger:route Post /public/user/referral/request public userProfile
-	//	Responses:
-	//		200: UserProfile
-	//		401:
-	// 		400: ErrorResponse
-	//		422: ErrorResponse
-	//		500: ErrorResponse
-	//		503: ErrorResponse
-	publicRouter.
-		Methods("POST").
-		Path("/user/referral/request").
-		Handler(middleware.AuthVerifier(cfg.Auth)(handler.ReferralHandler(cfg, sr)))
-
 	//	swagger:route GET /public/company/list public companyList
 	//	Responses:
-	//		200: CompanyList
+	//		200: CompanyListResponse
 	//		401:
 	// 		400: ErrorResponse
 	//		422: ErrorResponse
@@ -65,7 +52,7 @@ func addPublicRoutes(router *mux.Router, cfg config.Config, sr *service.Registry
 
 	//	swagger:route GET /public/company/users/list public companyUsersList
 	//	Responses:
-	//		200: CompanyUsersList
+	//		200: CompanyUsersListResponse
 	//		401:
 	// 		400: ErrorResponse
 	//		422: ErrorResponse
@@ -75,4 +62,17 @@ func addPublicRoutes(router *mux.Router, cfg config.Config, sr *service.Registry
 		Methods("GET").
 		Path("/company/users/list").
 		Handler(middleware.AuthVerifier(cfg.Auth)(handler.CompanyUsersListHandler(cfg, sr)))
+
+	//	swagger:route Post /public/user/referral/request public referralRequest
+	//	Responses:
+	//		200: ReferralResponse
+	//		401:
+	// 		400: ErrorResponse
+	//		422: ErrorResponse
+	//		500: ErrorResponse
+	//		503: ErrorResponse
+	publicRouter.
+		Methods("POST").
+		Path("/user/referral/request").
+		Handler(middleware.AuthVerifier(cfg.Auth)(handler.ReferralHandler(cfg, sr)))
 }
