# handler/response/company_list_response.go
@@ -7,21 +7,22 @@ import (
 	"github.com/techx/portal/domain"
 )
 
+// swagger:model
 type CompanyListResponse struct {
 	Companies []Company `json:"companies"`
 }
 
 type Company struct {
-	CompanyID int64  `json:"company_id"`
-	Name      string `json:"name"`
+	ID   int64  `json:"id"`
+	Name string `json:"name"`
 }
 
 func NewCompanyListResponse(_ context.Context, _ config.Config, companies domain.Companies) (CompanyListResponse, HTTPMetadata) {
 	companyList := make([]Company, 0)
-	for _, u := range companies {
+	for _, c := range companies {
 		companyList = append(companyList, Company{
-			CompanyID: u.CompanyID,
-			Name:      u.Name,
+			ID:   c.ID,
+			Name: c.Name,
 		})
 	}
 
